# tally-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  BRANCH_PROTECTION_SETUP.md  CODEOWNERS  LABELS.md  NAVIGATION.md  PROJECT_BOARD.md  PULL_REQUEST_TEMPLATE.md  RULESETS.md  TRIAGE.md  dependabot.yml  rulesets.graphql
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-approve-docs.yml  auto-label.yml  auto-merge.yml  ci.yml  pr-opener.yml
.husky/: pre-commit
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.module.css  App.test.tsx  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql  0002_fix_envelope_spent_triggers.sql  0003_payee_memory.sql  0004_session_summaries.sql  0005_chat_messages.sql  0006_gnucash_import_columns.sql  0007_accounts_gnc_guid.sql
apps/desktop/src-tauri/src/: chat.rs  error.rs  id.rs  lib.rs  main.rs  secrets.rs
apps/desktop/src-tauri/src/ai/: advisories.rs  classifier.rs  mod.rs  orchestrator.rs  parser.rs  payee_memory.rs  prompt.rs  session_summary.rs  snapshot.rs
apps/desktop/src-tauri/src/ai/adapter/: claude.rs  mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/core/: coa.rs  correction.rs  envelope.rs  ledger.rs  mod.rs  proposal.rs  read.rs  validation.rs  validation_matrix.rs
apps/desktop/src-tauri/src/core/import/: mod.rs
apps/desktop/src-tauri/src/core/import/gnucash/: committer.rs  mapper.rs  mod.rs  reader.rs  reconcile.rs  test_fixtures.rs
apps/desktop/src-tauri/src/crypto/: key_derivation.rs  mnemonic.rs  mod.rs  salt_store.rs
apps/desktop/src-tauri/src/db/: connection.rs  mod.rs
apps/desktop/src-tauri/src/db/migrations/: mod.rs
apps/desktop/src-tauri/src/scheduler/: mod.rs
apps/desktop/src-tauri/tests/: gnucash_import_integration.rs
apps/desktop/src/__tests__/: MATRIX.md
apps/desktop/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
apps/desktop/src/hooks/: useChatHistory.ts  useChatPersistence.test.ts  useChatPersistence.ts  useCommitProposal.test.ts  useCommitProposal.test.tsx  useCommitProposal.ts  useInvalidateSidebar.test.tsx  (+9 more)
docs/: tally_phase1_spec.docx  tally_phase1_spec.md
docs/superpowers/: a11y-2026-04.md
docs/superpowers/plans/: 2026-04-23-t048-sidebar-read-queries.md  2026-04-24-gnucash-import.md  2026-04-26-p2-testing-and-polish.md
docs/superpowers/specs/: 2026-04-21-ui-foundation-design.md  2026-04-23-t048-sidebar-read-queries-design.md  2026-04-24-gnucash-import-design.md  2026-04-26-p2-testing-and-polish-design.md
docs/temp_docx/docProps/: core.xml
docs/temp_docx/word/: document.xml  footer1.xml  header1.xml  styles.xml
scripts/: setup-branch-protection.sh  setup-rulesets.sh
terraform/: rulesets.tf
(+108 files in other folders)
