[workspace]
members = [
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Robert Warriner"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
ulid = "1"
argon2 = "0.5"
bip39 = { version = "2", features = ["rand"] }
rand = "0.8"
tauri = { version = "2", features = [] }
