[package]
name = "tally-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "tally_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tally-desktop"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
ulid.workspace = true
argon2.workspace = true
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
