[package]
name = "tally-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "tally_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tally-desktop"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
ulid.workspace = true
argon2.workspace = true
bip39.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rand = "0.8"
tauri-plugin-shell = "2"
reqwest.workspace = true
async-trait.workspace = true
lru.workspace = true
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[dependencies.libsqlite3-sys]
version = "0.30"
features = ["bundled-sqlcipher"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
